--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,12 @@
         <dependency>
             <groupId>org.rascalmpl</groupId>
             <artifactId>typepal</artifactId>
-            <version>0.14.6</version>
+            <version>0.14.7-BOOT1</version>
         </dependency>
         <dependency>
             <groupId>org.rascalmpl</groupId>
             <artifactId>rascal-core</artifactId>
-            <version>0.12.10</version>
+            <version>0.12.11-BOOT1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
