--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,13 @@
     <dependencies>
         <dependency>
             <groupId>org.rascalmpl</groupId>
-            <artifactId>rascal</artifactId>
-            <version>0.40.17</version>
+            <artifactId>rascal-unshaded</artifactId>
+            <version>0.41.0-RC8-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-terminal</artifactId>
+            <version>3.27.0</version>
         </dependency>
         <dependency>
             <groupId>org.rascalmpl</groupId>
@@ -50,7 +55,7 @@
         <dependency>
             <groupId>org.rascalmpl</groupId>
             <artifactId>rascal-core</artifactId>
-            <version>0.12.12</version>
+            <version>0.12.12-fixrascal0.41.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
