--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.rascalmpl</groupId>
             <artifactId>rascal</artifactId>
-            <version>0.41.0-RC13-SNAPSHOT</version>
+            <version>0.41.0-RC16</version>
         </dependency>
         <dependency>
             <groupId>org.jline</groupId>
